RESOLVED FIXED104350
REGRESSION(r136631): Fix null pointer dereference in WebPagePopupImpl::paint
https://bugs.webkit.org/show_bug.cgi?id=104350
Summary REGRESSION(r136631): Fix null pointer dereference in WebPagePopupImpl::paint
Kent Tamura
Reported 2012-12-07 00:31:59 PST
REGRESSION(r136631): Fix null pointer dereference in WebPagePopupImpl::paint
Attachments
Patch (1.69 KB, patch)
2012-12-07 00:47 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-12-07 00:47:22 PST
WebKit Review Bot
Comment 2 2012-12-07 01:10:33 PST
Comment on attachment 178174 [details] Patch Clearing flags on attachment: 178174 Committed r136935: <http://trac.webkit.org/changeset/136935>
WebKit Review Bot
Comment 3 2012-12-07 01:10:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.