REGRESSION(r136631): Fix null pointer dereference in WebPagePopupImpl::paint https://bugs.webkit.org/show_bug.cgi?id=104350

Reviewed by Hajime Morita.

We changed WebPagePopupImpl so that it deleted m_page in
closePopup. However, paint function is still called.

* src/WebPagePopupImpl.cpp:
(WebKit::WebPagePopupImpl::paint): Block by m_closing.


Canonical link: https://commits.webkit.org/122510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136935 268f45cc-cd09-0410-ab3c-d52691b4dbfc